fix for dark mode

--- a/src/app/Project.module.css
+++ b/src/app/Project.module.css
@@ -43,7 +43,7 @@
     .description {
       /* margin-bottom: 40px; */
       padding-bottom: 40px;
-      background-color: #FFFFFF;
+      /* background-color: #FFFFFF; */
     }
 
     .overview {
